# coreutils

./: Cargo.toml  manifest.toml
manifests/: cat.toml  echo.toml  false.toml  ls.toml  mkdir.toml  pwd.toml  rm.toml  touch.toml  true.toml
src/: lib.rs
